# jupyter-nb-marimo-ollama

./: README.md  docker-compose.yaml
jupyter-marimo-srv/: Dockerfile  marimo_proxy.py  pyproject.toml  setup.py
jupyter-marimo-srv/marimo-server-proxy/: pyproject.toml
