[project]
name = "datashield-notebook"
version = "0.0.1"
description = "A Jupyter workspace environment with marimo and elyra extensions"
authors = [{name = "Mike Harding", email = "m.harding@lancaster.ac.uk"}]
requires-python = ">=3.10"

dependencies = [
  "marimo-proxy",
  "marimo",
  "jupyter-server-proxy",
  "elyra",
  "jupyter-rsession-proxy"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
marimo-proxy = { path = "./marimo-server-proxy" }
